src/test/deca/context/valid/added/heritage.deca
class A {
    void b() {
        println("b");
    }
}

class C extends A {
    void d() {
        println("d");
    }
}

{
    C c = new C();
    c.b();
}