src/test/deca/context/invalid/added/heritage.deca
class GroupeGl{

}

class ChefEquipe extends GroupeGl{
    void crie() {
        print("Bark");
    }
}

class Membre extends GroupeGl {
}



{
    Membre melvin = new Membre();
    melvin.crie();
}